alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -1158,7 +1158,6 @@ input:checked + .slider:before {
     margin: auto; }
   .msg-heading {
     display: flex;
-    justify-content: center;
     margin: auto;
     margin-top: 10px;
     width: 800px; }
