--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -37,7 +37,6 @@
 
   .msg-heading {
     display: flex;
-    justify-content: center;
     margin: auto;
     margin-top: 10px;
     width: 800px;
